# ShoebillPlugin

./: .gitignore  .travis.yml  CMakeLists.txt  Cleanup.bat  MAKEFILE  Makefile  PostBuild.sh  README.md  ShoebillPlugin.sln  build.sh
Dependencies/sampplugin/: sampplugin.vcxproj  sampplugin.vcxproj.filters
Pawn/: Shoebill.amx  Shoebill.pwn  ShoebillFS.amx  ShoebillFS.pwn
Source/JNI/: JNI.vcproj  JNI.vcxproj  JNI.vcxproj.filters  encoding.cpp  jni_core.cpp  jni_core.h  jni_functions.cpp  jni_functions.h  samp_core.cpp  samp_core.h
Source/Shoebill/: EncodingUtils.cpp  EncodingUtils.h  JniFunctions.cpp  JniFunctions.h  JniUtils.cpp  Shoebill.vcproj  Shoebill.vcxproj  Shoebill.vcxproj.filters  ShoebillMain.cpp  ShoebillMain.h  encoding.cpp  jni_core.cpp  jni_functions.cpp
Source/Wrapper/: AmxHelper.h  AmxInstanceManager.hpp  Callbacks.cpp  Callbacks.h  Functions.cpp  Functions.h  NativeFunctionManager.cpp  NativeFunctionManager.h  NativeFunctionManager.hpp  PluginBase.cpp  PluginBase.h  PluginMain.cpp  SimpleAsm.hpp  SimpleInlineHook.cpp  SimpleInlineHook.hpp  Wrapper.vcproj  Wrapper.vcxproj  Wrapper.vcxproj.filters  a_samp.h  amx_helper.h  callback.cpp  callback.h  core.cpp  function.cpp  function.h  samp.h
cmake/: AmxConfig.cmake  FindIconv.cmake  Plugin.cmake
src/: CMakeLists.txt  sampgdk.c  sampgdk.h
src/hook/: CMakeLists.txt  SimpleAsm.hpp  SimpleInlineHook.cpp  SimpleInlineHook.hpp
src/sampplugin/: CMakeLists.txt  amxplugin.cpp  plugincommon.h
src/sampplugin/amx/: amx.h  osdefs.h  sclinux.h
src/shoebill/: CMakeLists.txt  EncodingUtils.cpp  EncodingUtils.h  JniFunctions.cpp  JniFunctions.h  JniUtils.cpp  JniUtils.h  Shoebill.cpp  Shoebill.h  ShoebillMain.cpp  ShoebillMain.h  linux.cpp  linux.h
src/wrapper/: AmxHelper.h  AmxInstanceManager.hpp  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Functions.cpp  Functions.h  HookManager.cpp  HookManager.h  NativeFunctionManager.cpp  NativeFunctionManager.h  PluginBase.cpp  PluginBase.h  PluginMain.cpp  exports.def  samp.h
